Fixed `z-index`.

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -24,7 +24,7 @@ header .datetime { background-color: rgba(0,0,0,0.15); height: 45px; float: righ
 .button-status i { transition: all 0.3s; }
 .button-status:hover { opacity: 0.9; }
 .button-status:hover i { transform: scale(1.2); }
-.button-status-warning:before { content: '!'; color: white; background-color: red; text-align: center; width: 12px; height: 12px; line-height: 12px; border-radius: 100px; position: absolute; font-size: 9px; font-weight: bold; margin: 25px 0 0 15px; }
+.button-status-warning:before { content: '!'; color: white; background-color: red; text-align: center; width: 12px; height: 12px; line-height: 12px; border-radius: 100px; position: absolute; font-size: 9px; font-weight: bold; margin: 25px 0 0 15px; z-index: 5; }
 
 .status0 { color: #68B25B; }
 .status1 { color: #C55140; }
